@@ -185,6 +185,14 @@
 006_052.cpp
 006_053.cpp
 006_054.cpp
+006_055.cpp
+006_056.cpp
+006_057.cpp
+006_058.cpp
+006_059.cpp
+006_060.cpp
+006_061.cpp
+006_062.cpp
 
 #
 # 999: General preprocessing problems
